--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "echo \"No build step needed for Node.js backend\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "all": "^0.0.0",
     "bcrypt": "^6.0.0",
