--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "popox",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=22"
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
     "postinstall": "npm rebuild sqlite3",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
